@@ -26,6 +26,7 @@ export(get.treeinfo)
 export(get.treetext)
 export(ggtree)
 export(gplot)
+export(gzoom)
 export(plot)
 export(read.baseml)
 export(read.beast)
@@ -55,6 +56,7 @@ importFrom(Biostrings,GENETIC_CODE)
 importFrom(Biostrings,readBStringSet)
 importFrom(Biostrings,toString)
 importFrom(ape,Ntip)
+importFrom(ape,drop.tip)
 importFrom(ape,extract.clade)
 importFrom(ape,is.binary.tree)
 importFrom(ape,ladderize)
@@ -62,6 +64,7 @@ importFrom(ape,print.phylo)
 importFrom(ape,read.nexus)
 importFrom(ape,read.tree)
 importFrom(ape,reorder.phylo)
+importFrom(ape,which.edge)
 importFrom(ape,write.tree)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes)
@@ -79,11 +82,13 @@ importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_gradient)
 importFrom(ggplot2,scale_x_reverse)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
+importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylab)
 importFrom(grid,unit)
 importFrom(gridExtra,grid.arrange)
